flex/flex-tests/testData/js2_highlighting/NoCreateClassFixWithNoSourceRoots.as
<warning descr="Object is located in file out of source root, certain functionality will not be available">package</warning> {
public class <warning descr="Object is located in file out of source root, certain functionality will not be available">NoCreateClassFixWithNoSourceRoots</warning> extends <error descr="Unresolved type Base">Base</error> {
}
}